Header is now fixed; added Request demo on mobile

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -21,6 +21,7 @@ body {
   background-color: #f3efed;
   font-family: var(--fonts);
   margin: 0;
+  height: 1000px; // simulate that there's some content
 }
 body::after {
   --transition-duration: .4s;
