--- a/src/css/_button.scss
+++ b/src/css/_button.scss
@@ -13,7 +13,7 @@
   font-family: var(--fonts);
   font-size: 14px;
   height: var(--button-height);
-  line-height: 42px; // --button-height - border-width
+  line-height: 42px;
   padding: 0 40px;
   text-decoration: none;
   text-transform: uppercase;
@@ -22,6 +22,27 @@
 
 .button--outlined {
   color: var(--color-primary);
+}
+
+.button--demo {
+  background-color: var(--color-primary);
+  border-radius: 0;
+  color: #fff;
+  font-size: 21px;
+  height: 70px;
+  line-height: 66px;
+  text-align: center;
+  text-transform: capitalize;
+
+  @media (min-width: 710px) {
+    background-color: transparent;
+    border-radius: var(--button-height);
+    color: var(--color-primary);
+    font-size: 14px;
+    height: var(--button-height);
+    line-height: 42px;
+    text-transform: uppercase;
+  }
 }
 
 .button--skip {
