--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -1,31 +1,59 @@
 .header {
-  background-color: #fff;
+  // background-color: #fff;
   z-index: 2000;
+  width: 100%;
+  height: 100%;
+  position: fixed;
 
   @media (min-width: 710px) {
-    position: relative;
+    height: auto;
   }
 }
 
 .header__container {
+  background: #fff;
+  align-items: center;
+  display: grid;
+  grid-template-columns: min-content 1fr max-content;
   height: 70px;
+  justify-items: center;
   margin: 0 auto;
   max-width: var(--container-width);
   padding: 0 var(--container-space);
-  display: grid;
-  grid-template-columns: min-content 1fr max-content;
-  justify-items: center;
-  align-items: center;
 }
 
 .header__action-button {
-  display: none;
-  position: relative;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
   z-index: 500;
+  transform: translateY(100%);
+  transition-property: transform, opacity;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: ease-in;
 
   @media (min-width: 1024px) {
     display: block;
+    left: auto;
+    opacity: 1;
+    transform: none;
+    pointer-events: all;
+    position: relative;
+    width: auto;
   }
+}
+
+.is-nav-toggled .header__action-button {
+  transform: translateY(0);
+  transition-property: transform, opacity;
+  transition-duration: var(--transition-duration);
+  transition-timing-function: ease-out;
+  transition-delay: .5s;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .header__hamburger {
